// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container DeleteResource should render with proper resourceInfo params 1`] = `
<ConfirmDialog
  cancelAction={
    Object {
      "actionCreator": "deleteResource:cancel",
      "id": "dialog:delete:cancel",
      "label": "No",
      "model": Object {
        "resourceInfo": Object {
          "found": true,
          "id": "myResourceID",
          "label": "myLabel",
          "resourceType": "myResourceType",
          "uri": "/myEndpoint",
        },
      },
      "onClick": [Function],
    }
  }
  header="My header title"
  show={true}
  validateAction={
    Object {
      "actionCreator": "deleteResource:validate",
      "bsStyle": "danger",
      "id": "dialog:delete:validate",
      "label": "Yes",
      "model": Object {
        "resourceInfo": Object {
          "found": true,
          "id": "myResourceID",
          "label": "myLabel",
          "resourceType": "myResourceType",
          "uri": "/myEndpoint",
        },
      },
      "onClick": [Function],
    }
  }
>
  <div>
    myLabel
  </div>
</ConfirmDialog>
`;

exports[`Container DeleteResource should render with wrong resourceInfo params 1`] = `
<ConfirmDialog
  cancelAction={
    Object {
      "actionCreator": "deleteResource:cancel",
      "id": "dialog:delete:cancel",
      "label": "No",
      "model": Object {
        "resourceInfo": Object {
          "found": false,
          "id": "myResourceID",
          "label": "",
          "resourceType": "unknownResourceType",
          "uri": "/myEndpoint",
        },
      },
      "onClick": [Function],
    }
  }
  header="My header title"
  show={true}
  validateAction={
    Object {
      "actionCreator": "deleteResource:validate",
      "bsStyle": "danger",
      "id": "dialog:delete:validate",
      "label": "Yes",
      "model": Object {
        "resourceInfo": Object {
          "found": false,
          "id": "myResourceID",
          "label": "",
          "resourceType": "unknownResourceType",
          "uri": "/myEndpoint",
        },
      },
      "onClick": [Function],
    }
  }
>
  <div />
</ConfirmDialog>
`;
